# ExposureEclipse

./: .gitignore  CLAUDE.md  README.md  vercel.json
api/: index.py  requirements.txt
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  calc.py  cedents.py  counties.py  dataset_groups.py  ert_jobs.py  exports.py  exposures.py  hazards.py  hurricanes.py  live.py
backend/app/ert/: expected_tables.py
backend/app/models/: cedent.py  common.py  dataset.py  enums.py  exposure.py  jobs.py  warnings.py
backend/app/providers/: __init__.py  base.py  mock.py
backend/app/services/: calculations.py  county_reference.py  damage_ratio.py  email.py  export_excel.py  grouping.py  hazard_overlay.py  hurdat2.py  hurricane_impact.py  ibtracs.py  jobs.py  layer_calc.py  live_hurricane.py  marine_obs.py  sea_surface_temp.py  treaty_metadata.py  weather_alerts.py
backend/scripts/: _climatology.py  _pop_bias.py  backfill_county_rows.py  build_geo.py  build_hail_grid.py  build_tornado_grid.py  build_wildfire_grid.py  generate_extra_facts.py  merge_farmers_bda.py
backend/tests/: test_api_dataset_groups.py  test_api_exports.py  test_api_exposures.py  test_api_jobs.py  test_api_live.py  test_calculations.py  test_grouping.py  test_health.py  test_layer_calc.py  test_mock_provider.py
docs/: API.md  API_SPEC.md  ARCHITECTURE.md  BACKGROUND_JOBS_SPEC.md  CALCULATIONS.md  CALCULATION_RULES.md  CONTRACTS.md  DATA_MODEL.md  DEFINITION_OF_DONE.md  DEPLOY.md  ERROR_HANDLING.md  ERT_OUTPUT_FORMAT.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  (+10 more)
(+102 files in other folders)
